--- a/src/app_usweb/templates/app_usweb/menu.html
+++ b/src/app_usweb/templates/app_usweb/menu.html
@@ -1,10 +1,165 @@
+{% load static %}
+<!DOCTYPE html>
 <head>
-<link rel="stylesheet" type="text/css" href="../../static/app/css/menu.css">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>社員マスタ検索</title>
+
+<script type="text/javascript"	src="{% static 'app/js/common/jquery-3.3.1.min.js' %}"></script>
+<script type="text/javascript"	src="{% static 'app/js/common/jquery-ui.js' %}"></script>
+<script type="text/javascript"	src="{% static 'app/js/common/bootstrap.bundle.js' %}"></script>
+<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-datepicker.js' %}"></script>
+<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-datepicker.ja.min.js' %}"></script>
+<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-select.js' %}"></script>
+<script type="text/javascript" src="{% static 'app/js/common/common.js' %}"></script>
+<link rel="stylesheet" type="text/css"href="{% static 'app/css/common/bootstrap.css' %}"/>
+<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap3icons.css' %}" />
+<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-theme.min.css' %}" />
+<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-datepicker.min.css' %}" />
+<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-select.min.css' %}" />
+<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/style.css' %}" />
+<link rel="stylesheet" type="text/css"	href="{% static 'app/fontawesome/all.min.css' %}" />
+
+<style type="text/css">
+.accbox {
+	margin: 2m 0;
+	padding: 0;
+	max-width: 400px;
+	/*最大幅*/
+}
+
+.accbox label {
+	display: block;
+	margin: 3px 0;
+	padding: 13px 12px;
+	color: rgb(1, 1, 12);
+	font-weight: bold;
+	background: #f6f6f7;
+	cursor: pointer;
+	transition: all 0.5s;
+	font-weight: 900;
+}
+
+/*アイコンを表示*/
+.accbox label:before {
+	font-family: 'Font Awesome 5 Free';
+	padding-right: 6px;
+	font-weight: 900;
+	content: '\f107';
+}
+
+/*ラベルホバー時*/
+.accbox label:hover {
+	background: #1c1ea0;
+	color: rgb(247, 247, 248);
+}
+
+/*チェックは隠す*/
+.accbox input {
+	display: none;
+}
+
+/*中身を非表示にしておく*/
+.accbox .accshow {
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	opacity: 0;
+	transition: 0.8s;
+}
+
+/*クリックで中身表示*/
+.cssacc:checked+label+.accshow {
+	height: auto;
+	padding: 2x;
+	background: #fafafd;
+	opacity: 1;
+}
+
+.accbox .accshow p {
+	margin: 10px 10px
+}
+
+/*アイコンを入れ替える*/
+.cssacc:checked+label:before {
+	content: '\f106';
+}
+
+/*ロゴの位置固定*/
+.absolute-image {
+	position: absolute;
+	/* 要素の配置方法を指定 */
+	padding: 5px;
+	/* 余白指定 */
+	left: 0%;
+	/* 左からの位置指定 */
+	top: 0px;
+	/* 上からの位置指定 */
+}
+
+/*タイトルの位置固定*/
+.absolute-title {
+	position: absolute;
+	/* 要素の配置方法を指定 */
+	padding: 0px;
+	/* 余白指定 */
+	left: 44%;
+	/* 左からの位置指定 */
+	top: 0%;
+	/* 上からの位置指定 */
+}
+
+/*header内のフォント変更*/
+header {
+	font-family: 'Vollkorn', serif;
+}
+
+/*文字の大きさ*/
+.font-size-title {
+	font-size: 330%
+}
+
+.font-size-master {
+	font-size: 120%
+}
+
+.font-size-submenu {
+	font-size: 100%
+}
+
+/*社員マスタの余白*/
+.e-master-margin {
+	margin: 9%
+}
+
+/*モニタマスタの余白*/
+.m-master-margin {
+	margin: 6px
+}
+
+/*PCマスタの余白*/
+.pc-master-margin {
+	margin: 19px
+}
+
+/*社員情報の余白*/
+.e-search-margin {
+	margin: 22px
+}
+
+/*サブメニューの余白*/
+.submenu-margin {
+	margin: 20px
+}
+
+/*アイコンとマスタ登録の間の余白*/
+.icon-margin {
+	margin: 2px
+}
+</style>
+
 </head>
 <body>
-{% extends "app_usweb/base.html" %}
-{% block content %}
-<div class="card col-md-6 mx-auto">
 	<div class="accbox">
 		<!--ラベル1-->
 		<input type="checkbox" id="label1" class="cssacc" /> <label
@@ -32,7 +187,7 @@
 
 			<div class="font-size-submenu">
 				<span class="submenu-margin"> <i class="fas fa-save"></i> <span
-					class="icon-margin"> <a href="{% url 'app_usweb:user_create' %}">社員マスタ登録</a></span>
+					class="icon-margin"> <a href="{% url 'app_usweb:employee_info_regist' %}">社員マスタ登録</a></span>
 				</span>
 			</div>
 
@@ -92,6 +247,4 @@
 		<!--//ラベル4-->
 
 	</div>
-</div>
 	<!--//.accbox-->
-{% endblock %}
