--- a/src/app_usweb/templates/common/footer.html
+++ b/src/app_usweb/templates/common/footer.html
@@ -1,19 +1,8 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<style type="text/css">
-.footer-size {
-	font-size:
-}
-</style>
-</head>
-<body>
-	<br/>
-	<div class="footer-size">
-		<i class="fas fa-copyright"></i> Copyright2019 Unisystem Co.,Ltd.
-	</div>
-</body>
-</html>
+<footer class="footer mt-auto py-4">
+  <div class="container justify-content-center">
+    <p class="align-center text-center my-0">
+      <i class="fas fa-copyright"></i> Copyright2019 Unisystem Co.,Ltd.
+    </p>
+  </div>
+</footer>
