--- a/src/app_usweb/templates/master/EMD0101.html
+++ b/src/app_usweb/templates/master/EMD0101.html
@@ -1,30 +1,8 @@
-{% load static %}
+{% extends 'common/base.html' %}
 {% load item_extras %}
+{% block title %}社員マスタ登録{% endblock title %}
 <!DOCTYPE html>
-<html lang="ja" xmlns:th="http://www.thymeleaf.org"
-	xmlns="http://www.w3.org/1999/xhtml">
-
-
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>社員マスタ登録</title>
-
-<script type="text/javascript"	src="{% static 'app/js/common/jquery-3.3.1.min.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/jquery-ui.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap.bundle.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-datepicker.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-datepicker.ja.min.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-select.js' %}"></script>
-<script type="text/javascript" src="{% static 'app/js/common/common.js' %}"></script>
-<link rel="stylesheet" type="text/css"href="{% static 'app/css/common/bootstrap.css' %}"/>
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap3icons.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-theme.min.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-datepicker.min.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-select.min.css' %}" />
-
-<link rel="stylesheet" type="text/css"	href="{% static 'app/fontawesome/all.min.css' %}" />
-
+{% block load_css %}
 <style>
 /*保有資格の入力フォーム*/
 sen-mx {
@@ -61,178 +39,10 @@ sen-mx {
 	box-shadow: 1px 1px 2px;
 }
 </style>
-<script>
-	$(function() {
-		$("#id_hire_data_ym").datepicker({
-			language : 'ja',
-			startView : 1,
-			format : 'yyyymm',
-			autoclose : true,
-			immediateUpdates : true,
-			minViewMode : 1,
-			orientation : 'bottom',
-		});
-	});
-</script>
-<script>
-	$(function() {return
-		$(document)
-				.on(
-						"click",
-						".btn",
-						function() {
-							var submit = $(this);
-							if ($(this).val() == '登録') {
-								$(function() {
-									var flag = regCheck(flag);
-									if (flag) {
-										$("#mes").html(MESSAGE.ERR002).css(
-												'color', 'red').css(
-												'border-bottom',
-												'solid 1px red');
-										var scr = scrollTop(scr);
-									} else {
-										var $form = $("form");
-										$
-												.ajax(
-														{
-															type : 'POST',
-															dataType : 'json',
-															url : getContextUrl("{% url 'app_usweb:employee_info_regist' %}"),
-															data : $form
-																	.serialize(),
-														})
-												.done(
-														function(data) {
-															var error = data["msg"];
-															if (error == null) {
-																var regist = confirm(MESSAGE.INF001);
-																if (regist == true) {
-																	$(function() {
-																		var $form = $("form");
-																		$
-																				.ajax(
-																						{
-																							type : 'GET',
-																							dataType : 'html',
-																							url : getContextUrl('/master/employee/register'),
-																							data : $form
-																									.serialize(),
-																						})
-																				.done(
-																						function(
-																								data) {
-																							$(
-																									"#mes")
-																									.html(
-																											MESSAGE.INF004)
-																									.css(
-																											'color',
-																											'#3CB371')
-																									.css(
-																											'border-bottom',
-																											'solid 1px #66CC33');
-																							$(
-																									'form')
-																									.html(
-																											$(
-																													'form')
-																													.html());
-																							var scr = scrollTop(scr);
-																							var date = datepicker(date);
-																						})
-																	})
-																}
-															} else {
-																$("#mes")
-																		.html(
-																				MESSAGE.ERR003)
-																		.css(
-																				'color',
-																				'red')
-																		.css(
-																				'border-bottom',
-																				'solid 1px red');
-																var scr = scrollTop(scr);
-															}
-														})
-									}
-								})
-							}
-							if ($(this).val() == '更新') {
-								$(function() {
-									var flag = regCheck(flag);
-									if (flag) {
-										$("#mes").html(MESSAGE.ERR002).css(
-												'color', 'red').css(
-												'border-bottom',
-												'solid 1px red');
-										var scr = scrollTop(scr);
-									} else {
-										var regist = confirm(MESSAGE.INF002);
-										if (regist == true) {
-											$(function() {
-												var $form = $("form");
-												$
-														.ajax(
-																{
-																	type : 'GET',
-																	dataType : 'html',
-																	url : getContextUrl('/master/employee/update'),
-																	data : $form
-																			.serialize(),
-																})
-														.done(
-																function(data) {
-																	$("#mes")
-																			.html(
-																					MESSAGE.INF005)
-																			.css(
-																					'color',
-																					'#3CB371')
-																			.css(
-																					'border-bottom',
-																					'solid 1px #66CC33');
-																	var scr = scrollTop(scr);
-																})
-											})
-										}
-									}
-								})
-							}
-						})
-		//必須項目チェック処理共通化
-		function regCheck(flag) {
-			var regex = new RegExp(/^[a-zA-Z]+$/);//空文字判定
-			var str = "";
-			var flag = 0;
-			if (document.check.employee_cd.value == regex.test(str)) {
-				flag = 1;
-			} else if (document.check.employee_name.value == regex.test(str)) {
-				flag = 1;
-			} else if (document.check.hire_data_ym.value == regex.test(str)) {
-				flag = 1;
-			}
-			return flag;
-		}
-	});
-</script>
-</head>
+ {% endblock %}
 
-<body>
-	<!--ヘッダ-->
-	<header class="sen-header">
-		<div id="header-area">{% include 'common/header.html' %}</div>
-	</header>
-
-	<!--メニュー-->
-	<aside class="sen-menu" role="complementary" id="side">
-		<div id="menu-area">{% include 'common/menu.html' %}</div>
-	</aside>
-
-	<main class="sen-contents clearfix" role="main" id="main">
-	<div class="sen-main-contents">
-
+{% block contents %}
+	<div class="sen-main-contents" style="min-height:800px">
 		<p class="title">
 			<b>社員マスタ登録</b>
 		</p>
@@ -247,6 +57,7 @@ sen-mx {
               </button>
             </div>
         {% endif %}
+
 		<span id="mes" class="message"></span>
 
 		<form th:id="form" th:object="${form}" method="POST" name="check">
@@ -311,29 +122,42 @@ sen-mx {
 				<label class="sen-title-position">保有資格3</label>
 					{{ form.qualification3 }}
 			</div>
-			<br></br> <br></br> <br></br> <br></br> <br></br>
-
-			<div class="sen-btn-right">
+<div class="container mt-5">
 				{% if employee_cd != null %}
+				<div class="row">
+				<div class="col-8">
 				<a href="/U-SWEB/master/employee/search">
 					<input id="btn-back" type="button" class="btn-lg btn-position-back btn" value="戻る" />
 				</a>
+				</div>
+				<div class="float-right">
 					<input id="btn-update" type="button" class="btn-lg btn-position-detail btn" value="更新" />
+				</div>
+				</div>
 				{% else %}
+				<div class="float-right">
 					<input id="btn-regist" type="submit" class="btn-lg btn-position btn" value="登録" />
+				</div>
 				{% endif %}
-			</div>
-			<br></br> <br></br>
+
+</div>
 		</form>
 
 	</div>
-	</main>
 
-	<!--フッター-->
-	<footer class="sen-footer">
-		<div id="footer-area">{% include 'common/footer.html' %}</div>
-	</footer>
-
-</body>
-
-</html>
+{% endblock %}
+{% block load_js %}
+<script>
+	$(function() {
+		$("#id_hire_data_ym").datepicker({
+			language : 'ja',
+			startView : 1,
+			format : 'yyyymm',
+			autoclose : true,
+			immediateUpdates : true,
+			minViewMode : 1,
+			orientation : 'bottom',
+		});
+	});
+</script>
+ {% endblock %}
