--- a/src/app_usweb/templates/common/menu.html
+++ b/src/app_usweb/templates/common/menu.html
@@ -1,257 +1,115 @@
 {% load static %}
-<!DOCTYPE html>
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>社員マスタ検索</title>
-<script type="text/javascript"	src="{% static 'app/js/common/jquery-3.3.1.min.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/jquery-ui.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap.bundle.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-datepicker.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-datepicker.ja.min.js' %}"></script>
-<script type="text/javascript"	src="{% static 'app/js/common/bootstrap-select.js' %}"></script>
-<script type="text/javascript" src="{% static 'app/js/common/common.js' %}"></script>
-<link rel="stylesheet" type="text/css"href="{% static 'app/css/common/bootstrap.css' %}"/>
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap3icons.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-theme.min.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-datepicker.min.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/bootstrap-select.min.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/css/common/style.css' %}" />
-<link rel="stylesheet" type="text/css"	href="{% static 'app/fontawesome/all.min.css' %}" />
-
-<style type="text/css">
-.accbox {
-	margin: 2m 0;
-	padding: 0;
-	max-width: 400px;
-	/*最大幅*/
-}
-
-.accbox label {
-	display: block;
-	margin: 3px 0;
-	padding: 13px 12px;
-	color: rgb(1, 1, 12);
-	font-weight: bold;
-	background: #f6f6f7;
-	cursor: pointer;
-	transition: all 0.5s;
-	font-weight: 900;
-}
-
-/*アイコンを表示*/
-.accbox label:before {
-	font-family: 'Font Awesome 5 Free';
-	padding-right: 6px;
-	font-weight: 900;
-	content: '\f107';
-}
-
-/*ラベルホバー時*/
-.accbox label:hover {
-	background: #1c1ea0;
-	color: rgb(247, 247, 248);
-}
-
-/*チェックは隠す*/
-.accbox input {
-	display: none;
-}
-
-/*中身を非表示にしておく*/
-.accbox .accshow {
-	height: 0;
-	padding: 0;
-	overflow: hidden;
-	opacity: 0;
-	transition: 0.8s;
-}
-
-/*クリックで中身表示*/
-.cssacc:checked+label+.accshow {
-	height: auto;
-	padding: 2x;
-	background: #fafafd;
-	opacity: 1;
-}
-
-.accbox .accshow p {
-	margin: 10px 10px
-}
-
-/*アイコンを入れ替える*/
-.cssacc:checked+label:before {
-	content: '\f106';
-}
-
-/*ロゴの位置固定*/
-.absolute-image {
-	position: absolute;
-	/* 要素の配置方法を指定 */
-	padding: 5px;
-	/* 余白指定 */
-	left: 0%;
-	/* 左からの位置指定 */
-	top: 0px;
-	/* 上からの位置指定 */
-}
-
-/*タイトルの位置固定*/
-.absolute-title {
-	position: absolute;
-	/* 要素の配置方法を指定 */
-	padding: 0px;
-	/* 余白指定 */
-	left: 44%;
-	/* 左からの位置指定 */
-	top: 0%;
-	/* 上からの位置指定 */
-}
-
-/*header内のフォント変更*/
-header {
-	font-family: 'Vollkorn', serif;
-}
-
-/*文字の大きさ*/
-.font-size-title {
-	font-size: 330%
-}
-
-.font-size-master {
-	font-size: 120%
-}
-
-.font-size-submenu {
-	font-size: 100%
-}
-
-/*社員マスタの余白*/
-.e-master-margin {
-	margin: 9%
-}
-
-/*モニタマスタの余白*/
-.m-master-margin {
-	margin: 6px
-}
-
-/*PCマスタの余白*/
-.pc-master-margin {
-	margin: 19px
-}
-
-/*社員情報の余白*/
-.e-search-margin {
-	margin: 22px
-}
-
-/*サブメニューの余白*/
-.submenu-margin {
-	margin: 20px
-}
-
-/*アイコンとマスタ登録の間の余白*/
-.icon-margin {
-	margin: 2px
-}
-</style>
-
-</head>
-
-
-<body>
-
-	<div class="accbox">
-		<!--ラベル1-->
-		<input type="checkbox" id="label1" class="cssacc" /> <label
-			for="label1"> <span class="font-size-master">社員情報<span
-				class="e-search-margin"></span><i class="fa fa-users"></i></span>
-		</label>
-		<div class="accshow">
-			<!--ここに隠す中身-->
-
-			<div class="font-size-submenu">
-				<span class="submenu-margin"> <i class="fas fa-save"></i> <span
-					class="icon-margin"> <a th:href="@{/trans/employeeInfo/search}">社員情報検索</a></span>
-				</span>
-			</div>
-
-		</div>
-		<!--//ラベル1-->
-		<!--ラベル2-->
-		<input type="checkbox" id="label2" class="cssacc" /> <label
-			for="label2"> <span class="font-size-master">社員マスタ<span
-				class="e-master-margin"></span><i class="fas fa-user-alt"></i></span>
-		</label>
-		<div class="accshow">
-			<!--ここに隠す中身-->
-
-			<div class="font-size-submenu">
-				<span class="submenu-margin"> <i class="fas fa-save"></i> <span
-					class="icon-margin"> <a href="{% url 'app_usweb:employee_info_regist' %}">社員マスタ登録</a></span>
-				</span>
-			</div>
-
-			<div class="font-size-submenu">
-				<span class="submenu-margin"> <i class="fas fa-search"></i>
-				<a href="{% url 'app_usweb:reference' %}">社員マスタ検索</a>
-				</span>
-			</div>
-
-		</div>
-		<!--//ラベル2-->
-
-		<!--ラベル3-->
-		<input type="checkbox" id="label3" class="cssacc" /> <label
-			for="label3"> <span class="font-size-master">モニタマスタ<span
-				class="m-master-margin"></span><i class="fas fa-desktop"></i></span>
-		</label>
-		<div class="accshow">
-			<!--ここに隠す中身-->
-
-			<div class="font-size-submenu">
-				<span class="submenu-margin"> <i class="fas fa-save"></i><span
-					class="icon-margin"> <a th:href="@{/master/monitor/regist}">モニタマスタ登録</a>
-				</span></span>
-			</div>
-
-			<div class="font-size-submenu">
-				<span class="submenu-margin"> <i class="fas fa-search"></i> <a
-					th:href="@{/master/monitor/search}">モニタマスタ検索</a>
-				</span>
-			</div>
-
-		</div>
-		<!--//ラベル3-->
-
-		<!--ラベル4-->
-		<input type="checkbox" id="label4" class="cssacc" /> <label
-			for="label4"> <span class="font-size-master">PCマスタ<span
-				class="pc-master-margin"></span><i class="fas fa-laptop"></i></span>
-		</label>
-		<div class="accshow">
-			<!--ここに隠す中身-->
-
-			<div class="font-size-submenu">
-				<span class="submenu-margin"> <i class="fas fa-save"></i> <span
-					class="icon-margin"><a th:href="@{/master/pc/regist}">
-							PCマスタ登録</a> </span>
-				</span>
-			</div>
-
-			<div class="font-size-submenu">
-				<span class="submenu-margin"> <i class="fas fa-search"></i> <a
-					th:href="@{/master/pc/search}"> PCマスタ検索</a>
-				</span>
-			</div>
-		</div>
-		<!--//ラベル4-->
-
-	</div>
-	<!--//.accbox-->
-
-
-</body>
-
-</html>
+<div class="accordion" id="accordionExample">
+  <!-- 社員情報 -->
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <a
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        data-toggle="collapse"
+        data-target="#collapseOne"
+        aria-expanded="true"
+        aria-controls="collapseOne"
+      >
+        <i class="fas fa-angle-down mr-2"></i>社員情報<i class="fa fa-users ml-2"></i>
+      </a>
+    </div>
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
+      <div class="card-body">
+        <div>
+          <i class="fas fa-save"></i
+          ><a href="{% url 'app_usweb:employee_info_regist' %}">社員情報検索</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- 社員マスタ -->
+  <div class="card">
+    <div class="card-header" id="headingEmp">
+      <a
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        data-toggle="collapse"
+        data-target="#collapseEmp"
+        aria-expanded="true"
+        aria-controls="collapseEmp"
+      >
+        <i class="fas fa-angle-down mr-2"></i>社員マスタ<i
+          class="fas fa-user-alt ml-2"
+        ></i>
+      </a>
+    </div>
+    <div id="collapseEmp" class="collapse" aria-labelledby="headingEmp">
+      <div class="card-body">
+        <div>
+          <i class="fas fa-save"></i
+          ><a href="{% url 'app_usweb:employee_info_regist' %}"
+            >社員マスタ登録</a
+          >
+        </div>
+        <div>
+          <i class="fas fa-search"></i
+          ><a href="{% url 'app_usweb:employee_info_regist' %}"
+            >社員マスタ検索</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- モニタマスタ -->
+  <div class="card">
+    <div class="card-header" id="headingMonitor">
+      <a
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        data-toggle="collapse"
+        data-target="#collapseMonitor"
+        aria-expanded="true"
+        aria-controls="collapseMonitor"
+      >
+        <i class="fas fa-angle-down mr-2"></i>モニタマスタ<i
+          class="fa fa-desktop ml-2"
+        ></i>
+      </a>
+    </div>
+    <div id="collapseMonitor" class="collapse" aria-labelledby="headingMonitor">
+      <div class="card-body">
+        <div>
+          <i class="fas fa-save"></i
+          ><a href="{% url 'app_usweb:employee_info_regist' %}"
+            >モニタマスタ登録</a
+          >
+        </div>
+        <div>
+          <i class="fas fa-search"></i
+          ><a href="{% url 'app_usweb:employee_info_regist' %}"
+            >モニタマスタ検索</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- PCマスタ -->
+  <div class="card">
+    <div class="card-header" id="headingPc">
+      <a
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        data-toggle="collapse"
+        data-target="#collapsePc"
+        aria-expanded="true"
+        aria-controls="collapsePc"
+      >
+        <i class="fas fa-angle-down mr-2"></i>PCマスタ<i class="fa fa-laptop  ml-2"></i>
+      </a>
+    </div>
+    <div id="collapsePc" class="collapse" aria-labelledby="headingPc">
+      <div class="card-body">
+        <div>
+          <i class="fas fa-save"></i
+          ><a href="{% url 'app_usweb:employee_info_regist' %}">PCマスタ登録</a>
+        </div>
+        <div>
+          <i class="fas fa-search"></i
+          ><a href="{% url 'app_usweb:employee_info_regist' %}">PCマスタ検索</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
