--- a/src/app_usweb/templates/common/index.html
+++ b/src/app_usweb/templates/common/index.html
@@ -1,10 +1,16 @@
 {% extends 'common/base.html' %}
 
+<!--タイトル -->
 {% block title %}トップ{% endblock title %}
 
-{% block load_css %} {% endblock %}
+<!--個別CSS -->
+{% block load_css %}
+{% endblock %}
 
+<!--メインコンテンツ -->
 {% block contents %}
 {% endblock %}
 
-{% block load_js %} {% endblock %}
+<!--個別Javascript -->
+{% block load_js %}
+{% endblock %}
