メニュースタイル微調整

--- a/src/app_usweb/templates/common/menu.html
+++ b/src/app_usweb/templates/common/menu.html
@@ -4,7 +4,7 @@
   <div class="card">
     <div class="card-header" id="headingOne">
       <a
-        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon font-size-master"
         data-toggle="collapse"
         data-target="#collapseOne"
         aria-expanded="true"
@@ -16,7 +16,7 @@
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
       <div class="card-body">
         <div>
-          <i class="fas fa-save"></i
+          <i class="fas fa-save mr-2"></i
           ><a href="{% url 'app_usweb:employee_info_regist' %}">社員情報検索</a>
         </div>
       </div>
@@ -26,7 +26,7 @@
   <div class="card">
     <div class="card-header" id="headingEmp">
       <a
-        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon font-size-master"
         data-toggle="collapse"
         data-target="#collapseEmp"
         aria-expanded="true"
@@ -40,13 +40,13 @@
     <div id="collapseEmp" class="collapse" aria-labelledby="headingEmp">
       <div class="card-body">
         <div>
-          <i class="fas fa-save"></i
+          <i class="fas fa-save mr-2"></i
           ><a href="{% url 'app_usweb:employee_info_regist' %}"
             >社員マスタ登録</a
           >
         </div>
         <div>
-          <i class="fas fa-search"></i
+          <i class="fas fa-search mr-2"></i
           ><a href="{% url 'app_usweb:employee_info_regist' %}"
             >社員マスタ検索</a
           >
@@ -58,7 +58,7 @@
   <div class="card">
     <div class="card-header" id="headingMonitor">
       <a
-        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon font-size-master"
         data-toggle="collapse"
         data-target="#collapseMonitor"
         aria-expanded="true"
@@ -72,13 +72,13 @@
     <div id="collapseMonitor" class="collapse" aria-labelledby="headingMonitor">
       <div class="card-body">
         <div>
-          <i class="fas fa-save"></i
+          <i class="fas fa-save mr-2"></i
           ><a href="{% url 'app_usweb:employee_info_regist' %}"
             >モニタマスタ登録</a
           >
         </div>
         <div>
-          <i class="fas fa-search"></i
+          <i class="fas fa-search mr-2"></i
           ><a href="{% url 'app_usweb:employee_info_regist' %}"
             >モニタマスタ検索</a
           >
@@ -90,7 +90,7 @@
   <div class="card">
     <div class="card-header" id="headingPc">
       <a
-        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon"
+        class="btn btn-link btn-block text-left text-decoration-none stretched-link angle-icon font-size-master"
         data-toggle="collapse"
         data-target="#collapsePc"
         aria-expanded="true"
@@ -102,11 +102,11 @@
     <div id="collapsePc" class="collapse" aria-labelledby="headingPc">
       <div class="card-body">
         <div>
-          <i class="fas fa-save"></i
+          <i class="fas fa-save mr-2"></i
           ><a href="{% url 'app_usweb:employee_info_regist' %}">PCマスタ登録</a>
         </div>
         <div>
-          <i class="fas fa-search"></i
+          <i class="fas fa-search mr-2"></i
           ><a href="{% url 'app_usweb:employee_info_regist' %}">PCマスタ検索</a>
         </div>
       </div>
